# swagger/openapi.yaml
@@ -1410,14 +1410,13 @@ components:
         comment:
           type: string
           description: "Комментарий к бронированию"
-        tag_to_place:
+        tag_to_location:
           type: number
-          description: "Id тэга стола"
+          description: "Id тэга местоположения стола"
           nullable: true
-        count_guests:
+        tag_to_number:
           type: number
-          default: 1
-          description: "Количество гостей"
+          description: "Id тэга количества гостей стола"
           nullable: true
 
     ReservationUpdateBase:
@@ -1450,15 +1449,6 @@ components:
         comment:
           type: string
           description: "Комментарий к бронированию"
-        tag_to_place:
-          type: number
-          description: "Id тэга стола"
-          nullable: true
-        count_guests:
-          type: number
-          default: 1
-          description: "Количество гостей"
-          nullable: true
 
     ReservationBase:
       type: object
@@ -1499,16 +1489,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/OrderBase"
-        tag_to_place:
-          allOf:
-          - $ref: "#/components/schemas/TagToPlace"
-          nullable: true
-          description: "Id тэга стола"
-        count_guests:
-          type: number
-          default: 1
-          description: "Количество гостей"
-          nullable: true
 
     RestaurantScheduleBase:
       type: object
